[package]
name = "codeswitch_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codeswitch = { path = "../codeswitch" }
lazy_static = "1.4.0"
lazy-regex = "2.2.2"
regex = "1"
clap = { version = "3.0.13", features = ["derive"] }
rustyline = "9.1.0"

